tests/paczka1/small_fuzzy/69267041.err
Error in line 1: Hr44WsDb A119 25,6
Error in line 7: A119 A119 37,4
Error in line 8: A119 A253 4,0
